--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
 streamlit
 pandas
+sqlalchemy
+pymysql
+mysql-connector-python # Used by mysql+mysqlconnector SQLAlchemy dialect
+python-dateutil # For relativedelta
+plotly
